# rs-gemini-genai

./: .gitignore  Cargo.toml  README.md
src/: api_client.rs  generate_content_types.rs  lib.rs  main.rs  models.rs  request.rs
src/types/: gemini_types.rs  generate_content_types.rs  mod.rs
