[package]
name = "rs-gemini-genai"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "stream"] }
strum = { version = "0.27.1", features = ["derive"] }
serde_json = "1.0.140"
strum_macros = "0.27.1"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
